* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-07-22.
+2004-07-27.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -19,14 +19,40 @@ differences are currently required.</p>
 
 <table width="100%" border="1" cellspacing="0" cellpadding="1">
 <tr><th align="left">Class</th> <th>Merge Status</th> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.ClasspathToolkit</td> <td class="needsmerge"><a href="compare/gnu.java.awt.ClasspathToolkit.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.ComponentDataBlitOp</td> <td class="needsmerge"><a href="compare/gnu.java.awt.ComponentDataBlitOp.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">gnu.java.awt.peer.gtk.GThreadMutex</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.java.awt.peer.gtk.GThreadNativeMethodRunner</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkMainThread</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkMainThread.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkMenuPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkMenuPeer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkToolkit</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkToolkit.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.beans.ExplicitBeanInfo</td> <td class="needsmerge"><a href="compare/gnu.java.beans.ExplicitBeanInfo.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.beans.IntrospectionIncubator</td> <td class="needsmerge"><a href="compare/gnu.java.beans.IntrospectionIncubator.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.beans.editors.ColorEditor</td> <td class="needsmerge"><a href="compare/gnu.java.beans.editors.ColorEditor.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.beans.editors.FontEditor</td> <td class="needsmerge"><a href="compare/gnu.java.beans.editors.FontEditor.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.beans.editors.NativeBooleanEditor</td> <td class="needsmerge"><a href="compare/gnu.java.beans.editors.NativeBooleanEditor.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.beans.editors.NativeByteEditor</td> <td class="needsmerge"><a href="compare/gnu.java.beans.editors.NativeByteEditor.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.beans.editors.NativeDoubleEditor</td> <td class="needsmerge"><a href="compare/gnu.java.beans.editors.NativeDoubleEditor.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.beans.editors.NativeFloatEditor</td> <td class="needsmerge"><a href="compare/gnu.java.beans.editors.NativeFloatEditor.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.beans.editors.NativeIntEditor</td> <td class="needsmerge"><a href="compare/gnu.java.beans.editors.NativeIntEditor.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.beans.editors.NativeLongEditor</td> <td class="needsmerge"><a href="compare/gnu.java.beans.editors.NativeLongEditor.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.beans.editors.NativeShortEditor</td> <td class="needsmerge"><a href="compare/gnu.java.beans.editors.NativeShortEditor.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.beans.editors.StringEditor</td> <td class="needsmerge"><a href="compare/gnu.java.beans.editors.StringEditor.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.io.ClassLoaderObjectInputStream</td> <td class="needsmerge"><a href="compare/gnu.java.io.ClassLoaderObjectInputStream.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">gnu.java.io.EncodingManager</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.java.io.PlatformHelper</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">gnu.java.lang.CharData</td> <td class="needsmerge"><a href="compare/gnu.java.lang.CharData.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.lang.ClassHelper</td> <td class="needsmerge"><a href="compare/gnu.java.lang.ClassHelper.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.lang.MainThread</td> <td class="needsmerge"><a href="compare/gnu.java.lang.MainThread.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">gnu.java.lang.SystemClassLoader</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">gnu.java.locale.Calendar</td> <td class="needsmerge"><a href="compare/gnu.java.locale.Calendar.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.locale.Calendar_de</td> <td class="needsmerge"><a href="compare/gnu.java.locale.Calendar_de.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.locale.Calendar_en</td> <td class="needsmerge"><a href="compare/gnu.java.locale.Calendar_en.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.locale.Calendar_nl</td> <td class="needsmerge"><a href="compare/gnu.java.locale.Calendar_nl.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.locale.LocaleInformation_de</td> <td class="needsmerge"><a href="compare/gnu.java.locale.LocaleInformation_de.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.locale.LocaleInformation_en</td> <td class="needsmerge"><a href="compare/gnu.java.locale.LocaleInformation_en.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.locale.LocaleInformation_nl</td> <td class="needsmerge"><a href="compare/gnu.java.locale.LocaleInformation_nl.diff">Diff</a></td> </tr>
+<tr> <td class="libgcj-only">gnu.java.net.DefaultContentHandlerFactory</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="needsmerge">gnu.java.net.PlainDatagramSocketImpl</td> <td class="needsmerge"><a href="compare/gnu.java.net.PlainDatagramSocketImpl.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.net.PlainSocketImpl</td> <td class="needsmerge"><a href="compare/gnu.java.net.PlainSocketImpl.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">gnu.java.net.content.text.plain</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -37,6 +63,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">gnu.java.net.protocol.file.Handler</td> <td class="needsmerge"><a href="compare/gnu.java.net.protocol.file.Handler.diff">Diff</a></td> </tr>
 <tr> <td class="GCJ-specific">gnu.java.net.protocol.gcjlib.Connection</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
 <tr> <td class="GCJ-specific">gnu.java.net.protocol.gcjlib.Handler</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
+<tr> <td class="needsmerge">gnu.java.net.protocol.http.Connection</td> <td class="needsmerge"><a href="compare/gnu.java.net.protocol.http.Connection.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.net.protocol.jar.Connection</td> <td class="needsmerge"><a href="compare/gnu.java.net.protocol.jar.Connection.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.nio.PipeImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.PipeImpl.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.nio.channels.FileChannelImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.channels.FileChannelImpl.diff">Diff</a></td> </tr>
@@ -54,6 +81,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.io.File</td> <td class="needsmerge"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.InputStreamReader</td> <td class="needsmerge"><a href="compare/java.io.InputStreamReader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.ObjectInputStream</td> <td class="needsmerge"><a href="compare/java.io.ObjectInputStream.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.io.ObjectOutputStream</td> <td class="needsmerge"><a href="compare/java.io.ObjectOutputStream.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.ObjectStreamClass</td> <td class="needsmerge"><a href="compare/java.io.ObjectStreamClass.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.ObjectStreamField</td> <td class="needsmerge"><a href="compare/java.io.ObjectStreamField.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.OutputStreamWriter</td> <td class="needsmerge"><a href="compare/java.io.OutputStreamWriter.diff">Diff</a></td> </tr>
@@ -164,7 +192,9 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">javax.xml.transform.stream.StreamSource</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">jni/gtk-peer/gnu_java_awt_peer_gtk_GThreadNativeMethodRunner.c</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkComponentPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkComponentPeer.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkFileDialogPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkFileDialogPeer.c.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkMainThread.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkMainThread.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkMenuPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkMenuPeer.c.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gthread-jni.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gthread-jni.c.diff">Diff</a></td> </tr>
 </table>
 </body>
