--- a/htdocs/gcc-3.4/buildstat.html
+++ b/htdocs/gcc-3.4/buildstat.html
@@ -227,6 +227,14 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Fedora Core 2, glibc 2.3.3, kernel 2.6.6</td>
+<td>Bootstrap (C, C++, F77, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-07/msg01201.html">3.4.1</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Fedora Core 1, binutils 2.14.90.0.6, glibc 2.3.2, kernel 2.4.22</td>
 <td>Bootstrap (C, C++, F77, Java, Obj-C, Ada):
 <a href="http://gcc.gnu.org/ml/gcc/2004-07/msg00153.html">3.4.1</a>,
