* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/gui-compare/libgcj-classpath-compare.html
+++ b/htdocs/java/gui-compare/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-07-27.
+2004-07-29.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -23,6 +23,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">gnu.java.awt.ComponentDataBlitOp</td> <td class="needsmerge"><a href="compare/gnu.java.awt.ComponentDataBlitOp.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.awt.EmbeddedWindow</td> <td class="needsmerge"><a href="compare/gnu.java.awt.EmbeddedWindow.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.awt.image.ImageDecoder</td> <td class="needsmerge"><a href="compare/gnu.java.awt.image.ImageDecoder.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.GLightweightPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.GLightweightPeer.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">gnu.java.awt.peer.gtk.GThreadMutex</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.java.awt.peer.gtk.GThreadNativeMethodRunner</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GdkGraphics</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GdkGraphics.diff">Diff</a></td> </tr>
@@ -95,6 +96,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.awt.Graphics</td> <td class="needsmerge"><a href="compare/java.awt.Graphics.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.Window</td> <td class="needsmerge"><a href="compare/java.awt.Window.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.im.InputContext</td> <td class="needsmerge"><a href="compare/java.awt.im.InputContext.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.image.DirectColorModel</td> <td class="needsmerge"><a href="compare/java.awt.image.DirectColorModel.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.MemoryImageSource</td> <td class="needsmerge"><a href="compare/java.awt.image.MemoryImageSource.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.RGBImageFilter</td> <td class="needsmerge"><a href="compare/java.awt.image.RGBImageFilter.diff">Diff</a></td> </tr>
