* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/gui-compare/libgcj-classpath-compare.html
+++ b/htdocs/java/gui-compare/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-07-29.
+2004-07-30.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -89,6 +89,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">gnu.regexp.CharIndexedInputStream</td> <td class="needsmerge"><a href="compare/gnu.regexp.CharIndexedInputStream.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.Button</td> <td class="needsmerge"><a href="compare/java.awt.Button.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.Component</td> <td class="needsmerge"><a href="compare/java.awt.Component.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.Container</td> <td class="needsmerge"><a href="compare/java.awt.Container.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.DefaultKeyboardFocusManager</td> <td class="needsmerge"><a href="compare/java.awt.DefaultKeyboardFocusManager.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.EventQueue</td> <td class="needsmerge"><a href="compare/java.awt.EventQueue.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.Font</td> <td class="needsmerge"><a href="compare/java.awt.Font.diff">Diff</a></td> </tr>
@@ -200,11 +201,17 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.text.NumberFormat</td> <td class="needsmerge"><a href="compare/java.text.NumberFormat.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.RuleBasedCollator</td> <td class="needsmerge"><a href="compare/java.text.RuleBasedCollator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.Calendar</td> <td class="needsmerge"><a href="compare/java.util.Calendar.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.Collection</td> <td class="needsmerge"><a href="compare/java.util.Collection.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.Currency</td> <td class="needsmerge"><a href="compare/java.util.Currency.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.GregorianCalendar</td> <td class="needsmerge"><a href="compare/java.util.GregorianCalendar.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.List</td> <td class="needsmerge"><a href="compare/java.util.List.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.Locale</td> <td class="needsmerge"><a href="compare/java.util.Locale.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.Map</td> <td class="needsmerge"><a href="compare/java.util.Map.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.PropertyPermissionCollection</td> <td class="needsmerge"><a href="compare/java.util.PropertyPermissionCollection.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.ResourceBundle</td> <td class="needsmerge"><a href="compare/java.util.ResourceBundle.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.Set</td> <td class="needsmerge"><a href="compare/java.util.Set.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.SortedMap</td> <td class="needsmerge"><a href="compare/java.util.SortedMap.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.SortedSet</td> <td class="needsmerge"><a href="compare/java.util.SortedSet.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.zip.Deflater</td> <td class="needsmerge"><a href="compare/java.util.zip.Deflater.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterConstants</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterEngine</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -250,6 +257,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">javax.swing.JButton</td> <td class="needsmerge"><a href="compare/javax.swing.JButton.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JCheckBox</td> <td class="needsmerge"><a href="compare/javax.swing.JCheckBox.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JCheckBoxMenuItem</td> <td class="needsmerge"><a href="compare/javax.swing.JCheckBoxMenuItem.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JComponent</td> <td class="needsmerge"><a href="compare/javax.swing.JComponent.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JDialog</td> <td class="needsmerge"><a href="compare/javax.swing.JDialog.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JEditorPane</td> <td class="needsmerge"><a href="compare/javax.swing.JEditorPane.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JFormattedTextField</td> <td class="needsmerge"><a href="compare/javax.swing.JFormattedTextField.diff">Diff</a></td> </tr>
@@ -266,9 +274,11 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">javax.swing.JTextField</td> <td class="needsmerge"><a href="compare/javax.swing.JTextField.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JToggleButton</td> <td class="needsmerge"><a href="compare/javax.swing.JToggleButton.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JToolBar</td> <td class="needsmerge"><a href="compare/javax.swing.JToolBar.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JToolTip</td> <td class="needsmerge"><a href="compare/javax.swing.JToolTip.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.MenuSelectionManager</td> <td class="needsmerge"><a href="compare/javax.swing.MenuSelectionManager.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.RepaintManager</td> <td class="needsmerge"><a href="compare/javax.swing.RepaintManager.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.ScrollPaneLayout</td> <td class="needsmerge"><a href="compare/javax.swing.ScrollPaneLayout.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.Timer</td> <td class="needsmerge"><a href="compare/javax.swing.Timer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.ToolTipManager</td> <td class="needsmerge"><a href="compare/javax.swing.ToolTipManager.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.UIDefaults</td> <td class="needsmerge"><a href="compare/javax.swing.UIDefaults.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.UIManager</td> <td class="needsmerge"><a href="compare/javax.swing.UIManager.diff">Diff</a></td> </tr>
@@ -296,6 +306,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicTabbedPaneUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicTabbedPaneUI.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicTextUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicTextUI.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicToolBarUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicToolBarUI.diff">Diff</a></td> </tr>
+<tr> <td class="libgcj-only">javax.swing.plaf.basic.BasicToolTipUI</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="needsmerge">javax.swing.table.DefaultTableColumnModel</td> <td class="needsmerge"><a href="compare/javax.swing.table.DefaultTableColumnModel.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.table.JTableHeader</td> <td class="needsmerge"><a href="compare/javax.swing.table.JTableHeader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.table.TableColumn</td> <td class="needsmerge"><a href="compare/javax.swing.table.TableColumn.diff">Diff</a></td> </tr>
