--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-07-29.
+2004-07-30.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -20,7 +20,6 @@ differences are currently required.</p>
 <table width="100%" border="1" cellspacing="0" cellpadding="1">
 <tr><th align="left">Class</th> <th>Merge Status</th> </tr>
 <tr> <td class="needsmerge">gnu.java.awt.ClasspathToolkit</td> <td class="needsmerge"><a href="compare/gnu.java.awt.ClasspathToolkit.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.awt.ComponentDataBlitOp</td> <td class="needsmerge"><a href="compare/gnu.java.awt.ComponentDataBlitOp.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.awt.EmbeddedWindow</td> <td class="needsmerge"><a href="compare/gnu.java.awt.EmbeddedWindow.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.awt.peer.GLightweightPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.GLightweightPeer.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">gnu.java.awt.peer.gtk.GThreadMutex</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -30,32 +29,11 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkMainThread</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkMainThread.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkMenuPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkMenuPeer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkToolkit</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkToolkit.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.beans.ExplicitBeanInfo</td> <td class="needsmerge"><a href="compare/gnu.java.beans.ExplicitBeanInfo.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.beans.IntrospectionIncubator</td> <td class="needsmerge"><a href="compare/gnu.java.beans.IntrospectionIncubator.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.beans.editors.ColorEditor</td> <td class="needsmerge"><a href="compare/gnu.java.beans.editors.ColorEditor.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.beans.editors.FontEditor</td> <td class="needsmerge"><a href="compare/gnu.java.beans.editors.FontEditor.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.beans.editors.NativeBooleanEditor</td> <td class="needsmerge"><a href="compare/gnu.java.beans.editors.NativeBooleanEditor.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.beans.editors.NativeByteEditor</td> <td class="needsmerge"><a href="compare/gnu.java.beans.editors.NativeByteEditor.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.beans.editors.NativeDoubleEditor</td> <td class="needsmerge"><a href="compare/gnu.java.beans.editors.NativeDoubleEditor.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.beans.editors.NativeFloatEditor</td> <td class="needsmerge"><a href="compare/gnu.java.beans.editors.NativeFloatEditor.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.beans.editors.NativeIntEditor</td> <td class="needsmerge"><a href="compare/gnu.java.beans.editors.NativeIntEditor.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.beans.editors.NativeLongEditor</td> <td class="needsmerge"><a href="compare/gnu.java.beans.editors.NativeLongEditor.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.beans.editors.NativeShortEditor</td> <td class="needsmerge"><a href="compare/gnu.java.beans.editors.NativeShortEditor.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.beans.editors.StringEditor</td> <td class="needsmerge"><a href="compare/gnu.java.beans.editors.StringEditor.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.io.ClassLoaderObjectInputStream</td> <td class="needsmerge"><a href="compare/gnu.java.io.ClassLoaderObjectInputStream.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">gnu.java.io.EncodingManager</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.java.io.PlatformHelper</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">gnu.java.lang.CharData</td> <td class="needsmerge"><a href="compare/gnu.java.lang.CharData.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.lang.ClassHelper</td> <td class="needsmerge"><a href="compare/gnu.java.lang.ClassHelper.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.lang.MainThread</td> <td class="needsmerge"><a href="compare/gnu.java.lang.MainThread.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">gnu.java.lang.SystemClassLoader</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="needsmerge">gnu.java.locale.Calendar</td> <td class="needsmerge"><a href="compare/gnu.java.locale.Calendar.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.locale.Calendar_de</td> <td class="needsmerge"><a href="compare/gnu.java.locale.Calendar_de.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.locale.Calendar_en</td> <td class="needsmerge"><a href="compare/gnu.java.locale.Calendar_en.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.locale.Calendar_nl</td> <td class="needsmerge"><a href="compare/gnu.java.locale.Calendar_nl.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.locale.LocaleInformation_de</td> <td class="needsmerge"><a href="compare/gnu.java.locale.LocaleInformation_de.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.locale.LocaleInformation_en</td> <td class="needsmerge"><a href="compare/gnu.java.locale.LocaleInformation_en.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.locale.LocaleInformation_nl</td> <td class="needsmerge"><a href="compare/gnu.java.locale.LocaleInformation_nl.diff">Diff</a></td> </tr>
 <tr> <td class="libgcj-only">gnu.java.net.DefaultContentHandlerFactory</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="needsmerge">gnu.java.net.PlainDatagramSocketImpl</td> <td class="needsmerge"><a href="compare/gnu.java.net.PlainDatagramSocketImpl.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.net.PlainSocketImpl</td> <td class="needsmerge"><a href="compare/gnu.java.net.PlainSocketImpl.diff">Diff</a></td> </tr>
@@ -133,8 +111,14 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.security.SecureClassLoader</td> <td class="needsmerge"><a href="compare/java.security.SecureClassLoader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.Collator</td> <td class="needsmerge"><a href="compare/java.text.Collator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.Calendar</td> <td class="needsmerge"><a href="compare/java.util.Calendar.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.Collection</td> <td class="needsmerge"><a href="compare/java.util.Collection.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.List</td> <td class="needsmerge"><a href="compare/java.util.List.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.Map</td> <td class="needsmerge"><a href="compare/java.util.Map.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.PropertyPermissionCollection</td> <td class="needsmerge"><a href="compare/java.util.PropertyPermissionCollection.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.ResourceBundle</td> <td class="needsmerge"><a href="compare/java.util.ResourceBundle.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.Set</td> <td class="needsmerge"><a href="compare/java.util.Set.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.SortedMap</td> <td class="needsmerge"><a href="compare/java.util.SortedMap.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.SortedSet</td> <td class="needsmerge"><a href="compare/java.util.SortedSet.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.zip.Deflater</td> <td class="needsmerge"><a href="compare/java.util.zip.Deflater.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterConstants</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterEngine</td> <td class="classpath-only">Classpath-only</td> </tr>
