--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -141,6 +141,8 @@ allows for a larger maximum message size of 2MB.  If your message exceeds
 this size, you should compress any attachments before sending it to the list.
 </p>
 
+<p>We have a strong policy of not editing the web archives.</p>
+
 <p>When posting messages, please select an appropriate list for the message
 and try to avoid cross posting a message to several lists.</p>
 
