* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -4,7 +4,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-08-02.</p>
+2004-08-07.</p>
 <p>Only lists non-gui files (NO AWT, Swing, or gtk-peer)</p>
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
@@ -79,6 +79,7 @@ differences are currently required.</p>
 <tr> <td class="VM-specific">java.lang.reflect.Method</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="needsmerge">java.lang.reflect.Modifier</td> <td class="needsmerge"><a href="compare/java.lang.reflect.Modifier.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.reflect.Proxy</td> <td class="needsmerge"><a href="compare/java.lang.reflect.Proxy.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.net.DatagramSocket</td> <td class="needsmerge"><a href="compare/java.net.DatagramSocket.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.Inet4Address</td> <td class="needsmerge"><a href="compare/java.net.Inet4Address.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.Inet6Address</td> <td class="needsmerge"><a href="compare/java.net.Inet6Address.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.InetAddress</td> <td class="needsmerge"><a href="compare/java.net.InetAddress.diff">Diff</a></td> </tr>
