--- a/htdocs/java/gui-compare/libgcj-classpath-compare.html
+++ b/htdocs/java/gui-compare/libgcj-classpath-compare.html
@@ -4,7 +4,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-08-02.</p>
+2004-08-07.</p>
 <p>Only lists gui files (AWT, Swing, and gtk-peer)</p>
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
@@ -16,15 +16,22 @@ differences are currently required.</p>
 <table width="100%" border="1" cellspacing="0" cellpadding="1">
 <tr><th align="left">Class</th> <th>Merge Status</th> </tr>
 <tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkFramePeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkFramePeer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkImage</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkImage.diff">Diff</a></td> </tr>
 <tr> <td class="libgcj-only">gnu.java.awt.peer.gtk.Test</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="libgcj-only">gnu.java.awt.peer.gtk.TestAWT</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="needsmerge">java.awt.Button</td> <td class="needsmerge"><a href="compare/java.awt.Button.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.Component</td> <td class="needsmerge"><a href="compare/java.awt.Component.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.Container</td> <td class="needsmerge"><a href="compare/java.awt.Container.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.Window</td> <td class="needsmerge"><a href="compare/java.awt.Window.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.geom.CubicCurve2D</td> <td class="needsmerge"><a href="compare/java.awt.geom.CubicCurve2D.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.geom.GeneralPath</td> <td class="needsmerge"><a href="compare/java.awt.geom.GeneralPath.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.geom.QuadCurve2D</td> <td class="needsmerge"><a href="compare/java.awt.geom.QuadCurve2D.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.geom.RoundRectangle2D</td> <td class="needsmerge"><a href="compare/java.awt.geom.RoundRectangle2D.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.image.Kernel</td> <td class="needsmerge"><a href="compare/java.awt.image.Kernel.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.Box</td> <td class="needsmerge"><a href="compare/javax.swing.Box.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JLayeredPane</td> <td class="needsmerge"><a href="compare/javax.swing.JLayeredPane.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.RepaintManager</td> <td class="needsmerge"><a href="compare/javax.swing.RepaintManager.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkMainThread.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkMainThread.c.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkWindowPeer.c.diff">Diff</a></td> </tr>
 </table>
