Extend the 3.4 schedule in line with Mark's announcement yesterday, and simplify the graph a bit.

--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -239,7 +239,6 @@ stages of development, branch points, and releases:</p>
 
   ... former releases ...
        |
-       v
        +-- GCC 3.0 branch created ------+
        |              (Feb 12 2001)      \
        |                                  v
@@ -288,7 +287,6 @@ stages of development, branch points, and releases:</p>
        v
   GCC 3.3 Stage 3 (ends Oct 15 2002)
        |
-       v
        +-- GCC 3.3 branch created ------+
        |            (Dec 14 2002)        \
        |                                  v
@@ -309,14 +307,22 @@ stages of development, branch points, and releases:</p>
        |                                             v
        |                                   GCC 3.3.5 release (Sep 30 2004)
        |                                              \
-       v                                               v
-       +-- GCC 3.4 branch created ------+  GCC 3.3.6 release (...)
+       |                                               v
+       |                                   GCC 3.3.6 release (...)
+       |
+       +-- GCC 3.4 branch created ------+
        |            (Jan 16 2004)        \ 
        |                                  v
        |                                   GCC 3.4.0 release (April 18 2004)
        |                                    \
        |                                     v 
        |                                   GCC 3.4.1 release (July 1 2004)
+       |                                      \
+       |                                       v
+       |                                   GCC 3.4.2 release (Sep 1 2004) 
+       |                                        \
+       |                                         v
+       |                                   GCC 3.4.3 release (...)
        :
        v
 </pre>
