Mention csl-3_3_1-branch

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -297,6 +297,20 @@ particular releases or snapshots or the latest snapshot.  </p>
 
 </dl>
 
+<h3><a name="distrobranches">Distribution Branches</a></h3>
+
+<p>These branches are maintained by organizations distributing GCC.
+No changes should be made to those branches without the explicit
+permission of the distributing organization.  The branch name should
+be prefixed with the initials of the distributing organization.</p>
+
+<dl>
+  
+  <dt>csl-3_3_1-branch</dt>
+  <dd>CodeSourcery release based on GCC 3.3.1.</dd>
+
+</dl>
+
 <h3><a name="olddevbranches">Inactive Development Branches</a></h3>
 
 <dl>
