--- a/htdocs/fortran/todo.html
+++ b/htdocs/fortran/todo.html
@@ -12,13 +12,6 @@ already.  Some of the items are also filed as a bug reports
 in our <a href="http://gcc.gnu.org/bugzilla/">bugzilla problem
 report database</a> as indicated below.</p>
 
-<h2>Compiler driver</h2>
-<ul>
-   <li>Call f951 for files ending in .f (using -ffixed-form).</li>
-   <li>Call the C preprocessor for files ending in .F, .F90 and .F95.</li>
-   <li>Remove or redefine -fg77-calls.</li>
-</ul>
-
 <h2>Parser</h2>
 <ul>
   <li>Give NULL() pointer correct attributes.</li>
@@ -40,9 +33,6 @@ report database</a> as indicated below.</p>
 
 <h2>Middle-end Interface</h2>
 <ul>
-  <li>Support for arrays of character strings
-      (<a href="http://gcc.gnu.org/PR12842">PR12842</a>).</li>
-  <li>Support for character string array constructors (ditto).</li>
   <li>Implement functions returning derived types.</li>
   <li>Support alternate ENTRY points
       (<a href="http://gcc.gnu.org/PR13082">PR13082</a>).</li>
@@ -65,8 +55,6 @@ report database</a> as indicated below.</p>
 
 <h2>Run time library</h2>
 <ul>
-   <li>Complete the implementation of direct access I/O
-       (<a href="http://gcc.gnu.org/PR12921">PR12921</a>).</li>
    <li>Complete the implementation of derived type I/O
        (<a href="http://gcc.gnu.org/PR13278">PR13278</a> and
         <a href="http://gcc.gnu.org/PR13280">PR13280</a>).</li>
@@ -75,7 +63,8 @@ report database</a> as indicated below.</p>
 
 <h2>g77 compatibility</h2>
 <ul>
-   <li>Implement Hollerith data.</li>
+   <li>Implement Hollerith data
+       (<a href="http://gcc.gnu.org/PR16531">PR16531</a>).</li>
    <li>Implement the -fugly- family of compiler options.</li>
    <li>Fix g77/f2c compatibility for returning complex numbers, and other
        wierdness.</li>
