Update 3.4 branch status, and add a link for 3.5.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -44,7 +44,7 @@ to maintain and improve quality.</p>
   <a href="gcc-3.4/">GCC 3.4.1</a> (released 2004-07-01)
 </dt><dd>
   Branch status:
-  <a href="http://gcc.gnu.org/ml/gcc/2004-07/msg00247.html">2004-07-06</a>
+  <a href="http://gcc.gnu.org/ml/gcc/2004-08/msg00305.html">2004-08-09</a>
   (open for regression fixes only).
 </dd>
 
@@ -68,8 +68,9 @@ to maintain and improve quality.</p>
 <dt><strong>Active development (mainline):</strong>
   will become GCC 3.5.0 (<a href="gcc-3.5/changes.html">current changes</a>)
 </dt><dd>
-  <a href="develop.html#stage2">Stage 2</a>;
-  open for all maintainers.
+  Branch status:
+  <a href="http://gcc.gnu.org/ml/gcc/2004-08/msg00305.html">2004-08-09</a>
+  (<a href="develop.html#stage2">Stage 2</a>; open for all maintainers).
 </dd>
 
 </dl>
